log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-output
          emptyDir: {}
      containers:
      - name: log-output-timestamper
        image: arkuar/log-output-timestamper:latest
        volumeMounts:
          - mountPath: /usr/src/app/files
            name: shared-output
      - name: log-output-reader
        image: arkuar/log-output-reader
        volumeMounts:
          - mountPath: /usr/src/app/files
            name: shared-output
