log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercise
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
