log-output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  namespace: exercise
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: exercise-pingpong-stripprefix@kubernetescrd # <middleware-namespace>-<middleware-name>@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2345
      - path: "/pingpong"
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 80
